hphp/test/slow/object_method/bad-inlining.php.expectf
int(1)
HipHop Notice: Undefined variable: x in %s/slow/object_method/bad-inlining.php on line 26
HipHop Fatal error: Uncaught exception 'BadMethodCallException' with message 'Call to a member function foo() on a non-object' in %s/slow/object_method/bad-inlining.php:15
Stack trace:
#0 %s/slow/object_method/bad-inlining.php(19): foo()
#1 {main}
